get user information
